Fix double spacing of addresses in admin
https://www.pivotaltracker.com/story/show/66045920

--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -450,3 +450,7 @@ table {
     }
   }
 }
+
+.address .vcard p {
+  margin-bottom: 0;
+}
